<resources>
    <string name="app_name">Baca Berita</string>
    <string name="api_key">c408621f993049a280e6b9e311f5ab33</string>
<!--    <string name="api_key">26fd2977a7d24fd7809c989b1363ff61</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--about information-->
    <string name="title_about_theme">Dark Theme</string>
    <string name="title_about_privacy">Privacy Policy</string>
    <string name="title_about_rate">Rate Us</string>
    <string name="title_about_more">More Apps</string>
    <string name="title_about_info">About</string>
    <string name="sub_title_about_theme">Better for eyesight and battery life</string>
    <string name="sub_title_about_privacy">App Terms &amp; Policies</string>
    <string name="sub_title_about_rate">Leave a review on the Google Play</string>
    <string name="sub_title_about_more">More apps from developer</string>
    <string name="sub_title_about_info">App Info, Build Version, Copyright</string>
    <string name="copyright">Copyright © 2021 AR Hakim \n(github.com/aerhakim). \n\nAll right reserved</string>
    <string name="dialog_ok">OK</string>
    <!--Titles-->
    <string name="first_slide_title">Lorem Ipsum</string>

    <!--Descriptions-->
    <string name="first_slide_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
</resources>